fixed listing fullscreen content distortion

--- a/scss/core/_core.scss
+++ b/scss/core/_core.scss
@@ -828,38 +828,38 @@ a[href*="#icon-more"] {
     margin-left: -10px;
   }
 }
+// 05-12 causes fullscreen bug for videos and RES content
+// .listing-page .linklisting {
+//   -webkit-animation: fade-in-fwd 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+//   -moz-animation: fade-in-fwd 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+//   animation: fade-in-fwd 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+// }
 
-.listing-page .linklisting {
-  -webkit-animation: fade-in-fwd 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-  -moz-animation: fade-in-fwd 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-  animation: fade-in-fwd 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-}
+// @-webkit-keyframes fade-in-fwd {
+//   0% {
+//     -webkit-transform: translateZ(-80px);
+//     transform: translateZ(-80px);
+//     opacity: 0
+//   }
+//   to {
+//     -webkit-transform: translateZ(0);
+//     transform: translateZ(0);
+//     opacity: 1
+//   }
+// }
 
-@-webkit-keyframes fade-in-fwd {
-  0% {
-    -webkit-transform: translateZ(-80px);
-    transform: translateZ(-80px);
-    opacity: 0
-  }
-  to {
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    opacity: 1
-  }
-}
-
-@keyframes fade-in-fwd {
-  0% {
-    -webkit-transform: translateZ(-80px);
-    transform: translateZ(-80px);
-    opacity: 0
-  }
-  to {
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    opacity: 1
-  }
-}
+// @keyframes fade-in-fwd {
+//   0% {
+//     -webkit-transform: translateZ(-80px);
+//     transform: translateZ(-80px);
+//     opacity: 0
+//   }
+//   to {
+//     -webkit-transform: translateZ(0);
+//     transform: translateZ(0);
+//     opacity: 1
+//   }
+// }
 
 .report-reasons.rounded {
   display: block!important;
